Fix: options page overflow

--- a/options/options.css
+++ b/options/options.css
@@ -7,6 +7,7 @@ body {
 }
 body.version-lt-57 {
 	background-color: #fbfbfb;
+	overflow: hidden;
 }
 
 a {
